--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   synchronized: any
   intl: any
   url_launcher: any
+  flushbar: any
 
 dev_dependencies:
   flutter_test:
@@ -40,6 +41,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/github_appbar.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
