--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutterclientsample
-description: A new Flutter application.
+description: Client sample flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -23,8 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.3
-  http: ^0.12.0
+  cupertino_icons: any
+  http: any
   json_annotation: any
   visibility_detector: any
   synchronized: any
